--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@emotion/core": "^10.0.35",
     "@emotion/styled": "^10.0.27",
     "babel-plugin-emotion": "^10.0.33",
+    "firebase": "^8.1.1",
+    "firebase-admin": "^9.4.1",
     "next": "^10.0.1",
     "react": "16.13.1",
     "react-dom": "16.13.1"
